<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.example.henrik.bussbolagandroid.MainActivity"
    android:gravity="center"
    style="@style/AppTheme"
    android:showDividers="middle|end"
    android:dividerPadding="@dimen/activity_horizontal_margin">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tur"
            android:id="@+id/radioButtonTur"
            android:layout_gravity="center"
            android:checked="false"
            android:layout_marginLeft="10dp"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tur &amp; Retur"
                android:id="@+id/radioButtonRetur"
                android:checked="false" />


        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ResaFrån"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTravelFrom"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ResaTill"
        android:id="@+id/textView2" />

    <Spinner
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTravelTo"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vecka"
        android:id="@+id/textView4" />

    <EditText
        android:layout_marginBottom="10dp"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etWeek"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Veckodag"
        android:id="@+id/textView3" />

    <Spinner
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDayofWeek"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Antalbiljetter"
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_marginBottom="10dp"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etTickets"
        android:gravity="center_horizontal" />

    <Button
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SökResa"
        android:id="@+id/buttonSearchTravel"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
